fix display on mobile attemp 2

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
 }
 
 .message-container {
